cmake_minimum_required(VERSION 3.23)
project(acwing)

set(CMAKE_CXX_STANDARD 14)

add_executable(95 95.cpp)

add_executable(1209 1209.cpp)
add_executable(116 116.cpp)
add_executable(1208 1208.cpp)
add_executable(789 789.cpp)
add_executable(790 790.cpp)
add_executable(795 795.cpp)
add_executable(796 796.cpp)
add_executable(730 730.cpp)
add_executable(1221 1221.cpp)
add_executable(1227 1227.cpp)
add_executable(99 99.cpp)
add_executable(1230 1230.cpp)
add_executable(1205 1205.cpp)
add_executable(1211 1211.cpp)
add_executable(1216 1216.cpp)
add_executable(2 2.cpp)
add_executable(1015 1015.cpp)
add_executable(895 895.cpp)
add_executable(1212 1212.cpp)
add_executable(1210 1210.cpp)
add_executable(1236 1236.cpp)
add_executable(1245 1245.cpp)
add_executable(1204 1204.cpp)
add_executable(466 466.cpp)
add_executable(787 787.cpp)
add_executable(4997 4997.cpp)
add_executable(1219 1219.cpp)
add_executable(1229 1229.cpp)
add_executable(1231 1231.cpp)
add_executable(1241 1241.cpp)